--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/x-icon" href="icon.jpg">
+    <!-- Font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Pixelify+Sans&display=swap" rel="stylesheet">
+    
     <title>Monster Level</title>
 </head>
 <body>
@@ -25,8 +30,8 @@
             <p class="num"></p>
             <p class="txt">Seconds</p>
         </div>
-        
     </div>
+    <p class="author">Set by:<span>Mo Zaher</span></p>
     <script src="main.js"></script>
 </body>
 </html>
